fixed clipping social links with a list

--- a/assets/stylesheets/file-specific/socials.css
+++ b/assets/stylesheets/file-specific/socials.css
@@ -18,11 +18,15 @@ body {
   transform: translateX(-50%);
   left: 50%;
   position: absolute;
+  list-style: none;
 }
 
-.social-links p {
+.social-links ul {
   display: flex;
   align-items: center;
+}
+
+.social-links li {
   font-size: 18px;
 }
 
